adding about me page change and change fonts style and size

--- a/W1D2/Css/styleme.css
+++ b/W1D2/Css/styleme.css
@@ -28,3 +28,16 @@ body
     width: 400px;
     height: 400px;
 }
+
+.bigsize
+{
+    font-size: 28px;
+}
+.italicfont
+{
+    font-style: italic;
+}
+.centertext
+{
+    text-align: center;
+}
