adding about me link

--- a/W1D2/Css/styleme.css
+++ b/W1D2/Css/styleme.css
@@ -43,5 +43,10 @@ body
 
 .myfavoritemovies a
 {
+    text-decoration: none;
     
+}
+.myfavoritemovies a:hover
+{
+    text-decoration: underline;
 }
