adding some fun to about me pge as per the lab

--- a/W1D2/Css/styleme.css
+++ b/W1D2/Css/styleme.css
@@ -54,10 +54,20 @@ body
 p:first-letter {
     font-size: 20px;
 }
+.myfavoritemovies ol
+{
+        transform: rotate(180deg);
+        margin-left: 30px;
+}
+.myfavoritemovies ol li
+{
+    transform: rotate(-180deg);
+}
+
+
 .myfavoritemovies .movieinfolist
 {
     list-style-type: none;
-
 }
 .myfavoritemovies .movieinfolist 
 {
